<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time to Train</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_session">Tap to Add a New Workout Session</string>
    <string name="session_prompt_add">Name Your Workout Session</string>
    <string name="button_ok">OK</string>
    <string name="button_skip">Skip</string>
    <string name="session_add_hint">Session Name</string>
    <string name="cancel">Cancel</string>
    <string name="menu_help">Help</string>
    <string name="edit_session_title">Edit Session...</string>
    <string name="delete_session">Delete Session</string>
    <string name="session_edit_hint">New Session Name</string>
    <string name="session_prompt_edit">Edit Your Session Name</string>
    <string name="title_activity_session_details">Entries for Session</string>
    <string name="add_entry">Tap to Add a New Exercise Entry</string>
    <string name="title_activity_select_and_edit_entry">SelectAndEditEntryActivity</string>
    <string name="delete_entry_title">Delete Entry</string>
    <string name="entry_enter_a_name">Enter a Name for Your Exercise</string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="select_entry_type">Select Entry Type</string>
    <string name="strength">Strength</string>
    <string name="cardio">Cardio</string>
    <string name="next_string">Next</string>
    <string name="add_cardio">Enter Cardio Information</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="distance">Distance (mi)</string>
    <string name="add_comment">Add a Note</string>
    <string name="strength_hint">Tap Next to Add Your First Set</string>
    <string name="title_activity_view_entry">ViewEntryActivity</string>
    <string name="cardio_records">Your Cardio Entry Record</string>
    <string name="your_time">Your Time</string>
    <string name="your_distance">Your Distance</string>
    <string name="notes">Notes</string>
    <string name="add_a_note">Add a Note</string>
    <string name="type_your_note">Enter your Note</string>
    <string name="strength_records">Your Strength Entry Record Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="add_a_set">Add a Set</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="title_activity_view_cardio_entry">ViewCardioEntry</string>
    <string name="submit">Submit</string>
    <string name="ok_button">OK</string>
    <string name="kilograms">kg</string>
    <string name="pounds">lb</string>
    <string name="menu_survey">Survey</string>

</resources>
