<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/add_entry_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/view_enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/entry_enter_a_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_entry_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_exercise_name"
            android:inputType="textCapWords" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/view_select_type_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".65"
                android:padding="10dp"
                android:text="@string/select_entry_type"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/group_exercise_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35" >

                <RadioButton
                    android:id="@+id/radio_strength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:focusable="false"
                    android:text="@string/strength" />

                <RadioButton
                    android:id="@+id/radio_cardio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@string/cardio" />

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/strength_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/strength_hint"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>