<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardio_append"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/edit_minutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight=".35"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_seconds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight=".35"
        android:ems="10"
        android:hint="@string/reps"
        android:inputType="number" />

        <RadioGroup
            android:id="@+id/units_grp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioButton
                android:id="@+id/radio_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/kg" />

            <RadioButton
                android:id="@+id/radio_lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb" />
        </RadioGroup>

</LinearLayout>