<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_set_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".12"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="3"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/units_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/kg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/kilograms" />

        <RadioButton
            android:id="@+id/lb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pounds" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".12"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="2"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".07"
        android:text="@string/reps" />

    <Button
        android:id="@+id/confirm_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".12"
        android:text="@string/ok_button" />

</LinearLayout>