<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardio_append"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_cardio_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:text="@string/add_cardio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/minutes_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:padding="5dp"
            android:text="@string/minutes" />

        <TextView
            android:id="@+id/seconds_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:padding="5dp"
            android:text="@string/seconds" />

        <TextView
            android:id="@+id/distance_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:padding="5dp"
            android:text="@string/distance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>